Removed indirect subcontentId relation to dnb, replaced with direct reference to dnbelement to reduce complexity.  Make sure inner poster does not overflow. [HFJ-617]

--- a/styles/interactive-video-editor.css
+++ b/styles/interactive-video-editor.css
@@ -478,6 +478,10 @@
   overflow-y: visible;
 }
 
+.h5p-interactivevideo-editor .h5p-interactive-video .h5p-interaction.h5p-poster .h5p-interaction-inner {
+  overflow: hidden;
+}
+
 /* interaction semantics wrapper */
 .h5p-interactivevideo-editor .h5p-dialog-inner {
   padding: 0.5em;
